# study_python

./: .gitignore  README.md  workspace.code-workspace
azure-identity-blob/: README.md  app.py  pyproject.toml
azure-keyvault-flask/: README.md  app.py  pyproject.toml
azure-sqldb-pyodbc/: README.md  pyproject.toml  sample1.py
azure-sqldb-sqlalchemy-alembic/: README.md  alembic.ini  pyproject.toml  sample.py  sqldb.py
azure-sqldb-sqlalchemy-alembic/alembic/: env.py  script.py.mako
azure-sqldb-sqlalchemy-alembic/alembic/versions/: 47f3a4aed281_create_account_table.py  867e7740574b_added_user_table.py  a0a18ba993dd_create_account_table.py  d0aaf81134b0_create_account_table.py
azure-sqldb-sqlalchemy-alembic/model/: __init__.py  user.py
